fix title alignment

--- a/src/style.css
+++ b/src/style.css
@@ -115,11 +115,9 @@ a {
 .film-poster {
   display: block;
   flex-shrink: 0;
-  flex-grow: 0;
   width: 250px;
   height: auto;
   border-radius: 1rem;
-  object-fit: contain;
   align-self: flex-start;
 
   @media (max-width:560px) {
